crates/xmtp_macro/tests/ui/retryable/unknown_key.stderr
error: expected `true`, `false`, `inherit`, `when = <expr>`, or `default = <bool>`
 --> tests/ui/retryable/unknown_key.rs:5:13
  |
5 |     #[retry(sometimes)]
  |             ^^^^^^^^^
