crates/xmtp_macro/tests/ui/retryable/unknown_key.rs
use xmtp_macro::Retryable;

#[derive(Retryable)]
enum E {
    #[retry(sometimes)]
    Bogus,
}

fn main() {}
